article in main developed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-light m-5">
-            <div class="col-5 ps-5 ms-5">
+            <div class="col-5 ms-5">
                 <a class="navbar-brand" href="#">
                     <img src="./assets/img/logo-bookmark.svg" alt="logo bookmark">
                 </a>
@@ -30,7 +30,7 @@
                     </li>
                     <li class="nav-item px-4">
                         <a class="nav-link" href="#">
-                            <button type="button" class="btn btn-secondary text-white bt-login">LOGIN</button>
+                            <button type="button" class="btn btn-secondary fw-bold text-white bt-login bt-shadow">LOGIN</button>
                         </a>
                     </li>
                 </ul>
@@ -40,9 +40,15 @@
 
     <main class="container-fluid">
         <div class="row">
-            <div class="col-6">
-                <h1>A Simple Bookmark Manager</h1>
-            </div>
+            <article class="col-6">
+                <h1 class="fw-bold mx-5 mt-5 py-5 ps-5">A Simple Bookmark Manager</h1>
+                <p class="fs-4 mb-5 ms-5 ps-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+                <div class="mx-5 px-5">
+                    <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-get">Get it on Chrome</button>
+                    <button type="button" class="btn btn-light fs-5 fw-bold text-black-50 bt-shadow bt-get">Get it on Firefox</button>
+                </div>
+            </article>
+
             <div class="col-6">.col-6</div>
         </div>
     </main>
