--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main class="container-fluid">
         <div class="row">
-            <article class="col-6">
+            <article class="col-6 p-0">
                 <h1 class="fw-bold mx-5 mt-5 py-5 ps-5">A Simple Bookmark Manager</h1>
                 <p class="fs-4 mb-5 ms-5 ps-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div class="mx-5 px-5">
@@ -49,7 +49,9 @@
                 </div>
             </article>
 
-            <div class="col-6">.col-6</div>
+            <section class="col-6 p-0 ps-5">
+                <img class="ps-3" src="./assets/img/illustration-hero-m.png" alt="picture of a web">
+            </section>
         </div>
     </main>
 </body>
