--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="container-fluid">
-        <div class="row">
+        <section class="row">
             <article class="col-6 p-0">
                 <h1 class="fw-bold mx-5 mt-5 py-5 ps-5">A Simple Bookmark Manager</h1>
                 <p class="fs-4 mb-5 ms-5 ps-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
@@ -49,10 +49,16 @@
                 </div>
             </article>
 
-            <section class="col-6 p-0 ps-5">
-                <img class="ps-3" src="./assets/img/illustration-hero-m.png" alt="picture of a web">
-            </section>
-        </div>
+            <div class="col-6 p-0 ps-2">
+                <img src="./assets/img/illustration-hero-m.png" alt="picture of a web">
+            </div>
+        </section>
+        <section class="row justify-content-center m-5">
+            <div class="col-6 col-6 text-center mt-5 px-0 pt-5">
+                <h3 class="fw-bold mb-5">Features</h3>
+                <p class="fs-4 text-black-50">Our aim is to make it quick and easy for you to access your favourite websites. Ypur bookmarks sync between your devices so you can access them on the go.</p>
+            </div>
+        </section>
     </main>
 </body>
 
