tab 2 and 3 updated

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </article>
 
-            <div class="col-6 p-0 ps-2">
+            <div class="col-6 p-0 ps-2 overflow-hidden">
                 <img src="./assets/img/illustration-hero-m.png" alt="picture of a web">
             </div>
         </section>
@@ -87,11 +87,11 @@
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                 <section class="row p-0 my-5">
                     <div class="col-6 p-0">
-                        <img src="./assets/img/illustration-features-tab-1-m.png" alt="picture of a web">
+                        <img src="./assets/img/illustration-features-tab-2-m.png" alt="picture of a web">
                     </div>
                     <article class="col-6 p-0 pe-5">
-                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Hola</h2>
-                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Organize your bookmarks however you like. Our simple drag-and-drop interfaces gives you complete control over how you manage your favourite sites.</p>
+                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Intelligent search</h2>
+                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
                         <div class="mx-5 px-5">
                             <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-more">More info</button>
                         </div>
@@ -101,11 +101,11 @@
             <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                 <section class="row p-0 my-5">
                     <div class="col-6 p-0">
-                        <img src="./assets/img/illustration-features-tab-1-m.png" alt="picture of a web">
+                        <img src="./assets/img/illustration-features-tab-3-m.png" alt="picture of a web">
                     </div>
                     <article class="col-6 p-0 pe-5">
-                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Chao</h2>
-                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Organize your bookmarks however you like. Our simple drag-and-drop interfaces gives you complete control over how you manage your favourite sites.</p>
+                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Share your bookmarks</h2>
+                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Easily share your bookmarks and collections with others. Create a shareable link you can send at the click of a button.</p>
                         <div class="mx-5 px-5">
                             <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-more">More info</button>
                         </div>
