--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
     <header class="container-fluid fixed-top p-0">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 justify-content-center">
-            <div class="container-fluid row">
-                <a class="navbar-brand p-0 m-0 col-6" href="#">
-                    <img src="./assets/img/logo-bookmark.svg" alt="logo bookmark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+            <div class="container-fluid row p-0">
+                <a class="navbar-brand p-0 m-0 col-6 p-1" href="#">
+                    <img class="ms-sm-5 ps-sm-5" src="./assets/img/logo-bookmark.svg" alt="logo bookmark">
                 </a>
-                <button type="button" class="navbar-toggler col-2 collapsed p-0" data-bs-toggle="collapse" data-bs-target="#menuNav">
+                <button type="button" class="navbar-toggler col-2 collapsed p-0 border-0" data-bs-toggle="collapse" data-bs-target="#menuNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div id="menuNav" class="collapse navbar-collapse collapse">
-                    <ul class="navbar-nav ms-3">
+                <div id="menuNav" class="collapse navbar-collapse collapse ct-navItems ct-navBar">
+                    <ul class="navbar-nav">
                         <li class="nav-item text-center py-3 n-item"><a class="nav-link m-3" href="#">FEATURES</a></li>
                         <li class="nav-item text-center py-3 n-item"><a class="nav-link m-3" href="#">PRICING</a></li>
                         <li class="nav-item text-center py-3 n-item"><a class="nav-link m-3" href="#">CONTACT</a></li>
@@ -39,29 +39,29 @@
         </nav>
     </header>
 
-    <main class="container-fluid mt-5 pt-5">
+    <main class="container-fluid mt-5 pt-lg-5">
         <section class="row mt-5">
-            <article class="col-6 p-0 pt-5">
-                <h1 class="fw-bold mx-5 mt-5 py-5 ps-5">A Simple Bookmark Manager</h1>
-                <p class="fs-4 mb-5 ms-5 ps-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
-                <div class="mx-5 px-5">
-                    <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-get">Get it on Chrome</button>
-                    <button type="button" class="btn btn-light fs-5 fw-bold text-black-50 bt-shadow bt-get">Get it on Firefox</button>
+            <article class="col-12 col-lg-6 p-0 pt-5 order-last order-lg-first text-center text-lg-start">
+                <h1 class="fw-bold mx-5 mtl-lg-5 py-lg-5 ps-lg-5">A Simple Bookmark Manager</h1>
+                <p class="fs-4 mb-5 p-3 ms-lg-5 p-lg-0 ps-lg-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+                <div class="row col-lg justify-content-center justify-content-lg-start mx-lg-5 px-lg-5">
+                    <button type="button" class="btn btn-primary fw-bold text-white me-3 bt-get">Get it on Chrome</button>
+                    <button type="button" class="btn btn-light fw-bold text-black-50 bt-shadow bt-get">Get it on Firefox</button>
                 </div>
             </article>
 
-            <div class="col-6 p-0 ps-2 overflow-hidden pt-5">
-                <img src="./assets/img/illustration-hero-m.png" alt="picture of a web">
+            <div class="col-12 col-lg-6 p-0 ps-lg-2 overflow-hidden pt-5 text-end order-first order-lg-last">
+                <img class="w-100" src="./assets/img/illustration-hero-m.png" alt="picture of a web">
             </div>
         </section>
         <section class="row justify-content-center m-5">
-            <div class="col-6 col-6 text-center mt-5 px-0 pt-5">
+            <div class="col-12 col-lg-6 text-center mt-5 px-0 pt-5">
                 <h3 class="fw-bold mb-4">Features</h3>
                 <p class="fs-4 text-black-50">Our aim is to make it quick and easy for you to access your favourite websites. Ypur bookmarks sync between your devices so you can access them on the go.</p>
             </div>
         </section>
         <section class="row justify-content-center mt-5">
-            <nav class="col-8">
+            <nav class="col-12 col-lg-8">
                 <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
                     <button class="nav-link active mx-5" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Simple Bookmarking</button>
                     <button class="nav-link mx-5" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Speedy Searching</button>
@@ -72,13 +72,13 @@
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                 <section class="row p-0 my-5">
-                    <div class="col-6 p-0">
-                        <img src="./assets/img/illustration-features-tab-1-m.png" alt="picture of a web">
+                    <div class="col-12 col-lg-6 p-0">
+                        <img class="w-100 pe-4 pe-lg-0" src="./assets/img/illustration-features-tab-1-m.png" alt="picture of a web">
                     </div>
-                    <article class="col-6 p-0 pe-5">
-                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Bookmark in one click</h2>
-                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Organize your bookmarks however you like. Our simple drag-and-drop interfaces gives you complete control over how you manage your favourite sites.</p>
-                        <div class="mx-5 px-5">
+                    <article class="col-12 col-lg-6 p-0 pe-lg-5">
+                        <h2 class="fw-bold text-center text-lg-start mx-3 mx-lg-5 mx-lg-5 py-5 ps-lg-5">Bookmark in one click</h2>
+                        <p class="fs-4 mb-5 ms-0 ms-lg-5 text-center text-lg-start px-3 px-lg-5 text-black-50">Organize your bookmarks however you like. Our simple drag-and-drop interfaces gives you complete control over how you manage your favourite sites.</p>
+                        <div class="d-none d-lg-grid mx-5 px-5">
                             <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-more">More info</button>
                         </div>
                     </article>
@@ -86,13 +86,13 @@
             </div>
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                 <section class="row p-0 my-5">
-                    <div class="col-6 p-0">
-                        <img src="./assets/img/illustration-features-tab-2-m.png" alt="picture of a web">
+                    <div class="col-12 col-lg-6 p-0">
+                        <img class="w-100 pe-4 pe-lg-0" src="./assets/img/illustration-features-tab-2-m.png" alt="picture of a web">
                     </div>
-                    <article class="col-6 p-0 pe-5">
-                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Intelligent search</h2>
-                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-                        <div class="mx-5 px-5">
+                    <article class="col-12 col-lg-6 p-0 pe-lg-5">
+                        <h2 class="fw-bold text-center text-lg-start mx-3 mx-lg-5 mx-lg-5 py-5 ps-lg-5">Intelligent search</h2>
+                        <p class="fs-4 mb-5 ms-0 ms-lg-5 text-center text-lg-start px-3 px-lg-5 text-black-50">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                        <div class="d-none d-lg-grid mx-5 px-5">
                             <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-more">More info</button>
                         </div>
                     </article>
@@ -100,13 +100,13 @@
             </div>
             <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                 <section class="row p-0 my-5">
-                    <div class="col-6 p-0">
-                        <img src="./assets/img/illustration-features-tab-3-m.png" alt="picture of a web">
+                    <div class="col-12 col-lg-6 p-0">
+                        <img class="w-100 pe-4 pe-lg-0" src="./assets/img/illustration-features-tab-3-m.png" alt="picture of a web">
                     </div>
-                    <article class="col-6 p-0 pe-5">
-                        <h2 class="fw-bold mx-5 mt-5 py-5 ps-5">Share your bookmarks</h2>
-                        <p class="fs-4 mb-5 ms-5 px-5 text-black-50">Easily share your bookmarks and collections with others. Create a shareable link you can send at the click of a button.</p>
-                        <div class="mx-5 px-5">
+                    <article class="col-12 col-lg-6 p-0 pe-lg-5">
+                        <h2 class="fw-bold text-center text-lg-start mx-3 mx-lg-5 mx-lg-5 py-5 ps-lg-5">Share your bookmarks</h2>
+                        <p class="fs-4 mb-5 ms-0 ms-lg-5 text-center text-lg-start px-3 px-lg-5 text-black-50">Easily share your bookmarks and collections with others. Create a shareable link you can send at the click of a button.</p>
+                        <div class="d-none d-lg-grid mx-5 px-5mx-5 px-5">
                             <button type="button" class="btn btn-primary fs-5 fw-bold text-white me-3 bt-more">More info</button>
                         </div>
                     </article>
@@ -115,36 +115,6 @@
         </div>
 
         <!--   AQUI EMPIEZA LA PRUEBA -->
-
-
-
-
-
-        <!-- <nav class="navbar navbar-light bg-white ">
-            <div class="col-5 ms-5">
-                <a class="navbar-brand" href="#">
-                    <img src="./assets/img/logo-bookmark.svg" alt="logo bookmark">
-                </a>
-            </div>
-            <div class="col-6 navbar-expand-lg">
-                <ul class="navbar-nav align-items-center">
-                    <li class="nav-item px-4">
-                        <a class="nav-link active" aria-current="page" href="#">FEATURES</a>
-                    </li>
-                    <li class="nav-item px-4">
-                        <a class="nav-link" href="#">PRICING</a>
-                    </li>
-                    <li class="nav-item px-4">
-                        <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                    <li class="nav-item px-4">
-                        <a class="nav-link" href="#">
-                            <button type="button" class="btn btn-secondary fw-bold text-white bt-login bt-shadow">LOGIN</button>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
 
         <!-- AQUI TERMINA LA PRUEBA -->
     </main>
