extension section with responsive

--- a/index.html
+++ b/index.html
@@ -113,10 +113,41 @@
                 </section>
             </div>
         </div>
-
-        <!--   AQUI EMPIEZA LA PRUEBA -->
-
-        <!-- AQUI TERMINA LA PRUEBA -->
+        <section class="row justify-content-center m-5">
+            <div class="col-12 col-lg-6 text-center mt-5 px-0 pt-5">
+                <h3 class="fw-bold mb-4">Download the extension</h3>
+                <p class="fs-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to priorize.</p>
+            </div>
+        </section>
+        <section class="row justify-content-center">
+            <div class="col-12 col-lg-4 ct-extension position-relative mx-3">
+                <div class="ct-txt-extension">
+                    <img class="m-2" src="./assets/img/logo-chrome.svg" alt="chrome logo">
+                    <h4 class="fw-bold m-1">Add to Chrome</h4>
+                    <p class="fs-5 text-black-50 m-1">Minimum version 62</p>
+                </div>
+                <img class="img-line" src="./assets/img/dotted-line.svg" alt="dotted line">
+                <button class="btn btn-primary bt-extension">Add & Install Extension</button>
+            </div>
+            <div class="col-12 col-lg-4 ct-extension position-relative mx-3 mt-4">
+                <div class="ct-txt-extension">
+                    <img class="m-2" src="./assets/img/logo-firefox.svg" alt="chrome logo">
+                    <h4 class="fw-bold m-1">Add to Firefox</h4>
+                    <p class="fs-5 text-black-50 m-1">Minimum version 55</p>
+                </div>
+                <img class="img-line" src="./assets/img/dotted-line.svg" alt="dotted line">
+                <button class="btn btn-primary bt-extension">Add & Install Extension</button>
+            </div>
+            <div class="col-12 col-lg-4 ct-extension position-relative mx-3 mt-5">
+                <div class="ct-txt-extension">
+                    <img class="m-2" src="./assets/img/logo-opera.svg" alt="chrome logo">
+                    <h4 class="fw-bold m-1">Add to Opera</h4>
+                    <p class="fs-5 text-black-50 m-1">Minimum version 46</p>
+                </div>
+                <img class="img-line" src="./assets/img/dotted-line.svg" alt="dotted line">
+                <button class="btn btn-primary bt-extension">Add & Install Extension</button>
+            </div>
+        </section>
     </main>
 
 
