--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </section>
         <section class="row justify-content-center m-5">
-            <div class="col-12 col-lg-6 text-center mt-5 px-0 pt-5">
+            <div class="col-12 col-lg-7 text-center mt-5 px-0 pt-5">
                 <h3 class="fw-bold mb-4">Features</h3>
                 <p class="fs-4 text-black-50">Our aim is to make it quick and easy for you to access your favourite websites. Ypur bookmarks sync between your devices so you can access them on the go.</p>
             </div>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <section class="row justify-content-center m-5">
-            <div class="col-12 col-lg-6 text-center mt-5 px-0 pt-5">
+            <div class="col-12 col-lg-7 text-center mt-5 px-0 pt-5">
                 <h3 class="fw-bold mb-4">Download the extension</h3>
                 <p class="fs-4 text-black-50">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to priorize.</p>
             </div>
@@ -148,6 +148,64 @@
                 <button class="btn btn-primary bt-extension">Add & Install Extension</button>
             </div>
         </section>
+        <section class="row justify-content-center m-5">
+            <div class="col-12 col-lg-7 text-center mt-5 px-0 pt-5">
+                <h3 class="fw-bold mb-4">Frequently Asked Questions</h3>
+                <p class="fs-4 text-black-50">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
+            </div>
+        </section>
+        <div class="row justify-content-center my-4">
+            <div class="accordion col-11 col-lg-5" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What is Bookmark?</button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+                            as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+                            though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How can I request a new browser?</button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as
+                            well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+                            though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Is there a mobile app?</button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+                            as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+                            though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">What about other Chromium browsers?</button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well
+                            as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>,
+                            though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
