--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand p-0 m-0 col-6 p-1" href="#">
                     <img class="ms-sm-5 ps-sm-5" src="./assets/img/logo-bookmark.svg" alt="logo bookmark">
                 </a>
-                <button type="button" class="navbar-toggler col-2 collapsed p-0 border-0" data-bs-toggle="collapse" data-bs-target="#menuNav">
+                <button type="button" class="navbar-toggler col-1 collapsed p-0 border-0" data-bs-toggle="collapse" data-bs-target="#menuNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="menuNav" class="collapse navbar-collapse collapse ct-navItems ct-navBar">
@@ -218,16 +218,16 @@
                 <button type="submit" class="btn btn-outline-secondary bg-white m-2 col-lg-3 bt-contactus">Contact-Us</button>
             </form>
         </div>
-        <nav class="d-flex justify-content-around align-items-center bg-success">
-            <div class="d-flex">
-                <img class="w-25 m-3 px-3" src="./assets/img/logo-bookmark-white.svg" alt="logo bookmark">
-                <ul class="d-flex m-0 p-0 list-unstyled">
+        <nav class="d-flex flex-column flex-lg-row justify-content-around align-items-center bg-success">
+            <div class="d-flex flex-column flex-lg-row">
+                <img class="m-3 px-3" src="./assets/img/logo-bookmark-white.svg" alt="logo bookmark">
+                <ul class="d-flex flex-column flex-lg-row m-0 p-0 list-unstyled">
                     <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">FEATURES</a></li>
                     <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">PRICING</a></li>
                     <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">CONTACT</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="mb-3 mb-lg-0">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-facebook m-2" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                 </svg>
