--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <h1 class="fw-bold mx-5 mtl-lg-5 py-lg-5 ps-lg-5">A Simple Bookmark Manager</h1>
                 <p class="fs-4 mb-5 p-3 ms-lg-5 p-lg-0 ps-lg-5 text-black-50">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
                 <div class="row col-lg justify-content-center justify-content-lg-start mx-lg-5 px-lg-5">
-                    <button type="button" class="btn btn-primary fw-bold text-white me-3 bt-get">Get it on Chrome</button>
-                    <button type="button" class="btn btn-light fw-bold text-black-50 bt-shadow bt-get">Get it on Firefox</button>
+                    <button type="button" class="btn btn-primary fw-bold text-white me-3 bt-getChrome">Get it on Chrome</button>
+                    <button type="button" class="btn btn-light fw-bold text-black-50 bt-shadow bt-getFire">Get it on Firefox</button>
                 </div>
             </article>
 
@@ -192,7 +192,7 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingFour">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">What about other Chromium browsers?</button>
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">What about other Chromium browsers?</button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
@@ -222,9 +222,9 @@
             <div class="d-flex flex-column flex-lg-row">
                 <img class="m-3 px-3" src="./assets/img/logo-bookmark-white.svg" alt="logo bookmark">
                 <ul class="d-flex flex-column flex-lg-row m-0 p-0 list-unstyled">
-                    <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">FEATURES</a></li>
-                    <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">PRICING</a></li>
-                    <li class="nav-item text-center"><a class="nav-link m-3 text-white" href="#">CONTACT</a></li>
+                    <li class="nav-item text-center"><a class="nav-link m-3 text-white bt-link" href="#">FEATURES</a></li>
+                    <li class="nav-item text-center"><a class="nav-link m-3 text-white bt-link" href="#">PRICING</a></li>
+                    <li class="nav-item text-center"><a class="nav-link m-3 text-white bt-link" href="#">CONTACT</a></li>
                 </ul>
             </div>
             <div class="mb-3 mb-lg-0">
